# CC_AI_Tools

./: .cursorignore  .gitignore  LICENSE  MANIFEST.in  New Features Ideas.md  README.md  __init__.py  env.example  install_Scripts.ps1  pyproject.toml  requirements.txt  setup.py
AI/: ai_client.py
Git/: CreateGitBranchName.py  CreateGitCommitMsg.py  CreateGitProgressReport.py  __init__.py  env.example  git_utils.py  requirements.txt
YAML/: yaml_utils.py
src/logic_ai_tools/ai/: client.py
src/logic_ai_tools/cursor_rules/: __init__.py  file_operations.py  gui_manager.py  main.py  project_scanner.py  rename_files.py  rule_manager.py
src/logic_ai_tools/cursor_rules/profiles/: __init__.py  base_profile.py  dotnet_blazor.py  dotnet_core.py  dotnet_framework.py  project_type.py  python.py  python_flask.py
src/logic_ai_tools/cursor_rules/rules/: cursor-rule-format.mdc  cursor-rules-location.mdc
src/logic_ai_tools/cursor_rules/rules/Blazor/: blazor-api-rules.mdc  blazor-environment-rules.mdc  blazor-security-testing-rules.mdc  blazor-style-structure-rules.mdc
src/logic_ai_tools/cursor_rules/rules/ChartJs/: chartjs-bar-charts.mdc
src/logic_ai_tools/cursor_rules/rules/Commenting/: basic-commenting-principles.dc  comment-maintenance.mdc  comment-markers.mdc  comment-placement.mdc
src/logic_ai_tools/cursor_rules/templates/: default_template.mdc  dotnet_blazor_template.mdc  dotnet_core_template.mdc  python_template.mdc
src/logic_ai_tools/git/: __init__.py  branch_name.py  commit_msg.py  progress_report.py  utils.py
src/logic_ai_tools/utils/: interrupt_handler.py
src/logic_ai_tools/yaml/: __init__.py  utils.py
(+128 files in other folders)
